# LABA.SEM3_item

./: CMakeLists.txt  README.md  main.cpp
garbage/: dynamic_array.h  function.cpp
lib /: function.h
lib /data_model/: invertary_data_model.h
lib /model/: item.h  potion.h  resource.h  weapon.h
lib /view/: inventory.h
src/: main.cpp
src/dop_task/: rail_fence.h
src/dop_task/dop_1/: rail_fence.cpp  rail_fence.h
src/dop_task/dop_2/: region.cpp  region.h
src/garbage/: function.cpp
src/lib/: function.h
src/lib/data_model/: inventory_data_model.cpp  inventory_data_model.h
src/lib/model/: item.h  potion.h  resource.h  weapon.h
src/lib/model/model_cpp/: item.cpp  potion.cpp  resource.cpp  weapon.cpp
src/lib/view/: inventory.cpp  inventory.h
